# virtual-pipes

./: Cargo.toml
src/: main.rs
